# movieswiper-agent

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  dockerfile  pyproject.toml
app/: __init__.py  config.py  extensions.py
app/__pycache__/: __init__.cpython-314.pyc.2192625662512
app/api/: __init__.py  health.py
app/api/chat/: controllers.py  repo.py  routes.py  schemas.py  services.py
app/common/: auth.py  error_handler.py  logging.py  request_context.py
tests/: conftest.py  test_auth.py  test_chat_routes.py  test_error_handler.py
