[project]
name = "movieswiper_agent"
version = "0.1.0"
description = "Agent micro service for MovieSwiper"
authors = [
    {name = "Devon Kalar",email = "devonkalar@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "blinker (==1.9.0)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "flask (==3.1.2)",
    "gunicorn (==25.0.3)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "packaging (==26.0)",
    "python-dotenv (==1.2.1)",
    "werkzeug (==3.1.5)",
    "annotated-types (==0.7.0)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "sentry-sdk[flask] (>=2.52.0,<3.0.0)",
    "pymongo (>=4.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (>=8.0.0)",
    "pytest-mock (>=3.14.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
